# rust-utils

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/cat/: main.rs
src/echo/: main.rs
src/id/: main.rs
src/inotifywait/: main.rs
