[[bin]]
name = "echo"
path = "src/echo/main.rs"

[[bin]]
name = "id"
path = "src/id/main.rs"

[[bin]]
name = "cat"
path = "src/cat/main.rs"

[[bin]]
name = "inotifywait"
path = "src/inotifywait/main.rs"

[dependencies]
clap = {version = "4.2.5", features = ["derive"]}
inotify = "0.10"
libc = "0.2"

[package]
edition = "2021"
name = "rust-utils"
version = "0.1.0"
